force-app/main/default/objects/ccrz__E_SubProdTerm__c/ccrz__E_SubProdTerm__c.object-meta.xml
<CustomObject>
    <description>B2B Commerce product subscription definition.</description>
    <label>CC SubProdTerm</label>
    <nameField>
        <label>CC SubProdTerm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC SubProdTerms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>