force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__AutoRenew__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AutoRenew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a subscription should auto-renew after it ends.</description>
    <inlineHelpText>Check to have the subscription auto-renew.</inlineHelpText>
    <label>Auto Renew</label>
    <type>Checkbox</type>
</CustomField>