force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__CCProduct__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CCProduct__c</fullName>
    <description>For recurring Order subscriptions this is the product that will be ordered.</description>
    <label>CC Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>CC SubProdTerms</relationshipLabel>
    <relationshipName>SubProdTerms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>