force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__DisplayName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DisplayName__c</fullName>
    <description>The name of this subscription.  Used as a parameter for other Display Name fields.</description>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>