force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__DisplayNameRT__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DisplayNameRT__c</fullName>
    <description>Rich Text enabled version of Display Name. If text is included here will override the standard Display Name Field.</description>
    <label>Display Name RT</label>
    <length>256</length>
    <type>Html</type>
</CustomField>