force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__EffectiveStart__c.field-meta.xml
<CustomField>
    <fullName>ccrz__EffectiveStart__c</fullName>
    <description>The first DateTime that this subscription will be available.</description>
    <label>Effective Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>