force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__Enabled__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Set to true if this subscription is enabled.  False otherwise.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>