force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__IgnoreInstallmentFrequencyFields__c.field-meta.xml
<CustomField>
    <fullName>ccrz__IgnoreInstallmentFrequencyFields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the Installment Frequency and Installment Frequency UOM fields are ignored an instead the Order Frequency and Order Frequency UOM fields are used for both Orders and Installments</description>
    <inlineHelpText>Check to have Order frequency determine Installment frequency.</inlineHelpText>
    <label>Ignore Installment Frequency Fields</label>
    <type>Checkbox</type>
</CustomField>