force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__InstallmentCount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__InstallmentCount__c</fullName>
    <description>Number of installments/payments billed for this subscription.</description>
    <inlineHelpText>Number of installments/payments billed for this subscription.</inlineHelpText>
    <label>Installment Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>