force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__InstallmentFrequency__c.field-meta.xml
<CustomField>
    <fullName>ccrz__InstallmentFrequency__c</fullName>
    <description>Frequency of Installment/Billing when combined with the Unit of Measure</description>
    <inlineHelpText>Frequency of Installment/Billing when combined with the Unit of Measure</inlineHelpText>
    <label>Installment Frequency</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>