force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__InstallmentFrequencyUOM__c.field-meta.xml
<CustomField>
    <fullName>ccrz__InstallmentFrequencyUOM__c</fullName>
    <description>Unit of Measure for Installment Frequency.  Possible values are Daily, Weekly, Monthly, Yearly. Capitalization is taken into account.</description>
    <inlineHelpText>Unit of Measure for Installment Frequency. Possible values are Daily, Weekly, Monthly, Yearly. Capitalization is taken into account.</inlineHelpText>
    <label>Installment Frequency UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>