force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__Name__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Name__c</fullName>
    <description>CCSPT-{00000000}</description>
    <displayFormat>CCSPT-{00000000}</displayFormat>
    <inlineHelpText>Auto-generated unique name.</inlineHelpText>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>