force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__OrderCount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderCount__c</fullName>
    <description>Number of orders to place/ship as part of this subscription</description>
    <inlineHelpText>Number of orders to place/ship as part of this subscription</inlineHelpText>
    <label>Order Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>