force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__OrderDisplayNameRT__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderDisplayNameRT__c</fullName>
    <description>Rich Text Version of the Order Display Name. Content in this field will override the content in the standard field.</description>
    <label>Order Display Name RT</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>