force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__OrderFrequency__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderFrequency__c</fullName>
    <description>The frequency of the order component of a Subscription</description>
    <inlineHelpText>Used in conjunction with UOM, order frequency is how often the service/product is performed/sent. Must be a whole number.</inlineHelpText>
    <label>Order Frequency</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>