force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__OrderFrequencyUOM__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderFrequencyUOM__c</fullName>
    <description>Unit of Measure for the Frequency of Order component of a Subscription.  Possible values are Daily, Weekly, Monthly, Yearly. Capitalization is taken into account.</description>
    <inlineHelpText>Unit of Measure for Order Frequency. Possible values are Daily, Weekly, Monthly, Yearly. Capitalization is taken into account.</inlineHelpText>
    <label>Order Frequency UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>