force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__ProductDetailDisplayName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductDetailDisplayName__c</fullName>
    <description>Text used for Displaying subscription information on the product detail page.</description>
    <label>Product Detail Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>