force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__ProductDetailDisplayNameRT__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductDetailDisplayNameRT__c</fullName>
    <description>Rich Text Version of the Product Detail Display Field. Content in this field will override the content in the standard field.</description>
    <label>Product Detail Display Name RT</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>