force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__ProductListDisplayName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductListDisplayName__c</fullName>
    <description>For future use.  Do not use.</description>
    <label>Product List Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>