force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__RecurringPricePercentage__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RecurringPricePercentage__c</fullName>
    <description>Used to calculate the recurring price of a Kit/Dynamic kit only. Does not apply to subscriptions that are on other product types.</description>
    <label>Recurring Price Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>