force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__Sequence__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Sequence__c</fullName>
    <description>Determines the order the subscription options appear in the the store. They appear in sequence order Low to High.</description>
    <inlineHelpText>Determines the order the subscription options appear in the the store. They appear in sequence order Low to High.</inlineHelpText>
    <label>Sequence</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>