force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__SubProdTermId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SubProdTermId__c</fullName>
    <description>External ID For SubProdTerms.  This id is not used by B2B Commerce.</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID for use with integrations.</inlineHelpText>
    <label>SubProdTerm Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>