force-app/main/default/objects/ccrz__E_SubProdTerm__c/fields/ccrz__UpfrontPricePercentage__c.field-meta.xml
<CustomField>
    <fullName>ccrz__UpfrontPricePercentage__c</fullName>
    <description>Used to calculate upfront price of a Kit/Dynamic kit only. Is not used by subscriptions on any other product types.</description>
    <label>Upfront Price Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>